# agent-smithers

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  help.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  dockerhub.yml  pypi-publish.yml
agent_smithers/: .env.example  __init__.py  __main__.py  app.py  cli.py  config.py  context.py  exceptions.py  history.py  llm_client.py  logging_conf.py  markdown_utils.py  matrix_client.py  responses.py  runtime.py  security.py  tooling.py
agent_smithers.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
agent_smithers/handlers/: __init__.py  cmd_ai.py  cmd_country.py  cmd_help.py  cmd_location.py  cmd_model.py  cmd_mymodel.py  cmd_prompt.py  cmd_reset.py  cmd_thinking.py  cmd_tools.py  cmd_verbose.py  cmd_whitelist.py  (+2 more)
docs/: ai-output-disclaimer.md  architecture.md  cli.md  commands.md  configuration.md  development.md  docker.md  getting-started.md  images.md  index.md  legacy-map.md  lm-studio.md  migration.md  ollama.md  operations.md  security.md  tools-and-mcp.md  verification.md
infinigpt/: app.py  cli.py  config.py  llm_client.py  matrix_client.py
infinigpt_matrix.egg-info/: PKG-INFO  SOURCES.txt
tests/: conftest.py  test_cli.py  test_config.py  test_handlers_country.py  test_handlers_location.py  test_handlers_model_ai_help.py  test_handlers_mymodel.py  test_handlers_prompt.py  test_handlers_reset_prompt.py  test_handlers_thinking.py  test_handlers_tools.py  test_handlers_verbose.py  test_handlers_whitelist.py  test_handlers_x.py  test_history.py  test_history_location.py  test_history_persistence.py  test_llm_client.py  test_markdown_utils.py  test_matrix_client_wrapper.py  test_router.py  test_runtime.py  test_security.py  test_tool_calling.py
(+3 files in other folders)
