[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-smithers"
version = "1.0.0"
description = "Agent Smithers Matrix bot (modular)"
requires-python = ">=3.10"
dependencies = [
  "matrix-nio[e2e]",
  "httpx",
  "markdown",
  "rich",
  "pillow",
  "cryptography"
]

[project.scripts]
agent-smithers = "agent_smithers.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["agent_smithers*"]
exclude = ["tests*", "store*", "no-e2e*"]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-asyncio",
]
