[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-smithers"
version = "1.0.0"
description = "Agent Smithers Matrix bot (modular)"
readme = "README.md"
license = "AGPL-3.0"
requires-python = ">=3.10"
keywords = ["matrix", "bot", "chatbot", "ai", "agent", "matrix-nio"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Topic :: Communications :: Chat",
]
dependencies = [
  "matrix-nio[e2e]",
  "httpx",
  "markdown",
  "rich",
  "pillow",
  "cryptography"
]

[project.scripts]
agent-smithers = "agent_smithers.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["agent_smithers*"]
exclude = ["tests*", "store*", "no-e2e*"]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-asyncio",
]

[project.urls]
Homepage = "https://github.com/h1ddenpr0cess20/agent-smithers"
Repository = "https://github.com/h1ddenpr0cess20/agent-smithers"
Issues = "https://github.com/h1ddenpr0cess20/agent-smithers/issues"
